--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ a:link {
     top: 30%;
     left: 87%;
 }
+#essa {
+    background-color: rgb(94, 36, 94);
+}
 
 #x {
     background-color: rgb(94, 36, 94);
